--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                 <h2>Anything you need,we’ve got you covered</h2>
                 <a class="more" href="#">Get in Touch</a>
               </div>
-              <div class="about_box">
+              <div class="box2g">
+                  <div class="about_box">
                 <div class="in-box">
                   <img src="images/service-icon1.svg">
                   <h3>Web &amp; Graphic<br>Design</h3>
@@ -84,6 +85,7 @@
                   <p>Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan <br>tincidunt.</p>
                 </div>
               </div>
+                  </div>
             </div>
           </div>
       </section><!-- End About -->
